--- a/res/drawable/setbox_solo.xml
+++ b/res/drawable/setbox_solo.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android" >
-    
+
     <item android:drawable="@drawable/settings_solo_p"
          android:state_pressed="true" ></item>
-        
+    <item android:drawable="@drawable/settings_solo_p"
+         android:state_selected="true" ></item>
     <item android:drawable="@drawable/settings_solo_n"></item>
 
 </selector>
