--- a/res/layout/activity_merchants_filter.xml
+++ b/res/layout/activity_merchants_filter.xml
@@ -8,13 +8,117 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context=".SortMerchantsActivity" >
 
+     <TextView
+        android:id="@+id/title"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"      
+        android:layout_marginBottom="10dip"
+        android:gravity="center"
+        android:paddingTop="5dip"
+        android:paddingBottom="5dip"        
+        android:text="Sort Restaurants by"
+        android:background="#FFA500"
+        android:textSize="16sp" />
+        
+	<Button
+        android:id="@+id/btn_sort_by_standard"
+        android:layout_width="170dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="5dp"  
+        android:layout_marginRight="5dp"  
+        android:layout_marginBottom="1dp"   
+        android:layout_below="@+id/title"
+        android:background="@drawable/setbox_solo"
+        android:gravity="center"
+        android:minHeight="60dp"
+        android:text="Standard Sort" />
+	
+	<Button
+        android:id="@+id/btn_sort_by_rating"
+        android:layout_width="170dp"
+        android:layout_height="wrap_content"
+       	android:layout_alignBottom="@+id/btn_sort_by_standard"
+        android:layout_below="@+id/title" 
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="5dp" 
+        android:background="@drawable/setbox_solo"
+        android:gravity="center"
+        android:minHeight="60dp"
+        android:text="The Best" />
+    
     <Button
+        android:id="@+id/btn_sort_by_distance"
+        android:layout_width="170dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/btn_sort_by_standard"
+        android:layout_alignLeft="@+id/btn_sort_by_standard"
+        android:layout_marginLeft="5dp"  
+        android:layout_marginRight="5dp" 
+        android:layout_marginBottom="1dp"   
+        android:background="@drawable/setbox_solo"
+        android:gravity="center"
+        android:minHeight="60dp"
+        android:text="The Closest" />
+ 
+
+    <Button
+        android:id="@+id/btn_sort_by_status"
+        android:layout_width="170dp"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/btn_sort_by_rating"
+        android:layout_alignRight="@+id/btn_sort_by_rating"
+        android:background="@drawable/setbox_solo"
+        android:gravity="center"
+        android:minHeight="60dp"
+        android:text="Now Open" />    
+    
+    <Button
+        android:id="@+id/btn_sort_by_nameAZ"
+        android:layout_width="170dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/btn_sort_by_distance"
+        android:layout_alignLeft="@+id/btn_sort_by_standard"
+        android:layout_marginLeft="5dp"  
+        android:layout_marginRight="5dp" 
+        android:background="@drawable/setbox_solo"
+        android:gravity="center"
+        android:minHeight="60dp"
+        android:text="A-Z Order" />   
+    
+    <Button
+        android:id="@+id/btn_sort_by_nameZA"
+        android:layout_width="170dp"
+        android:layout_height="wrap_content"
+        android:layout_alignBaseline="@+id/btn_sort_by_nameAZ"
+        android:layout_alignBottom="@+id/btn_sort_by_nameAZ"
+        android:layout_alignRight="@+id/btn_sort_by_rating"
+        android:background="@drawable/setbox_solo"
+        android:gravity="center"
+        android:minHeight="60dp"
+        android:text="Z-A Order" />
+    
+    <TextView
+        android:id="@+id/narrow_down"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"      
+        android:layout_below="@+id/btn_sort_by_nameAZ"
+        android:layout_marginTop="20dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:gravity="center"
+        android:text="Narrow Down"
+        android:background="#FFA500"
+        android:textSize="16sp" />
+    
+        <Button
         android:id="@+id/btn_sort_by_cuisine"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="10dp"
+        android:layout_alignLeft="@+id/narrow_down"
+        android:layout_below="@+id/narrow_down"
         android:background="@drawable/setbox_solo"
         android:drawableRight="@drawable/arrow_right"
         android:gravity="left|center_vertical|center_horizontal"
@@ -30,57 +134,9 @@
         android:layout_alignRight="@+id/btn_sort_by_cuisine"
         android:layout_marginRight="40dp"
         android:text="All cuisines"
-        android:textSize="16sp" />
-
-    <Button
-        android:id="@+id/btn_sort_by_name"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/btn_sort_by_distance"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/setbox_solo"
-        android:drawableRight="@drawable/arrow_right"
-        android:gravity="left|center_vertical|center_horizontal"
-        android:minHeight="60dp"
-        android:text="Name" />
-
-    <TextView
-        android:id="@+id/txt_name"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/btn_sort_by_name"
-        android:layout_alignBottom="@+id/btn_sort_by_name"
-        android:layout_alignRight="@+id/btn_sort_by_name"
-        android:layout_marginRight="40dp"
-        android:text="Most Recent"
-        android:textSize="16sp" />
-
-    <Button
-        android:id="@+id/btn_sort_by_distance"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/btn_sort_by_cuisine"
-        android:layout_marginTop="10dp"
-        android:background="@drawable/setbox_solo"
-        android:drawableRight="@drawable/arrow_right"
-        android:gravity="left|center_vertical|center_horizontal"
-        android:minHeight="60dp"
-        android:text="Distance" />
-
-    <TextView
-        android:id="@+id/txt_distance"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/btn_sort_by_distance"
-        android:layout_alignBottom="@+id/btn_sort_by_distance"
-        android:layout_alignRight="@+id/btn_sort_by_distance"
-        android:layout_marginRight="40dp"
-        android:text="10 miles"
-        android:textSize="16sp" />
-
-    <Button
+        android:textSize="16sp" />   
+    
+     <Button
         android:id="@+id/btn_apply"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -96,8 +152,8 @@
         android:shadowRadius="2"
         android:text="Apply"
         android:textColor="#ffffffff"
-        android:textSize="18sp" />
-
+        android:textSize="18sp" />   
+    
     <include
         android:id="@+id/loading_indicator"
         android:layout_width="wrap_content"
