ui changes, new progress bar

--- a/res/layout/loading.xml
+++ b/res/layout/loading.xml
@@ -1,17 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res/com.androidexample.delivery"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="@drawable/round_rect_dark"
     android:gravity="center"
     android:orientation="vertical" >
 
-    <ProgressBar
-        style="?android:attr/progressBarStyleLarge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="@dimen/activity_horizontal_margin"
-        android:layout_marginRight="@dimen/activity_horizontal_margin" />
+	<com.androidexample.delivery.ProgressView
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:src="@drawable/big_icon" 
+	    app:frameCount="16"
+	    app:duration="1000"/>
 
     <TextView
         android:id="@+id/txt_loading"
