--- a/res/layout/activity_display_merchants.xml
+++ b/res/layout/activity_display_merchants.xml
@@ -11,4 +11,12 @@
         android:layout_height="fill_parent"
         android:layout_marginTop="5dp" />
 
+  	<include
+        android:id="@+id/loading_indicator"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        layout="@layout/loading"                        
+    	android:visibility="gone"/>
+
 </RelativeLayout>
