--- a/res/layout/home_activity.xml
+++ b/res/layout/home_activity.xml
@@ -3,61 +3,120 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/bground1"
-    tools:context=".SplashActivity" >
-
-    <include
-        android:id="@+id/loading_indicator"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
-        layout="@layout/loading"
-        android:visibility="gone" />
+    tools:context=".SplashActivity" > 
 
     <RelativeLayout
         android:id="@+id/relativeLayout1"
-        android:layout_width="270dp"
-        android:layout_height="100dp"
+        android:layout_width="250dp"
+        android:layout_height="140dp"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
         android:layout_marginTop="155dp"
-        android:background="@color/white" >
-
-        <Button
-            android:id="@+id/search_btn"
-            android:layout_width="140dp"
-            android:layout_height="35dp"
-            android:layout_alignRight="@+id/search_box"
-            android:layout_below="@+id/search_box"
-            android:layout_toRightOf="@+id/button3"
-            android:clickable="true"
-            android:gravity="center"
-            android:text="Search"
-            android:textSize="14sp" />
+        android:background="@drawable/search_layer" >
 
         <EditText
             android:id="@+id/search_box"
-            android:layout_width="250dp"
-            android:layout_height="35dp"
+            android:layout_width="220dp"
+            android:layout_height="25dp"
+            android:layout_alignParentLeft="true"
             android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="15dp"
-            android:background="@drawable/edit_text_custom"
+            android:layout_marginLeft="30dp"
+            android:layout_marginTop="20dp"            
+            android:background="@drawable/edittext_shadow"
+            android:longClickable="false"
             android:ems="10"
-            android:hint="Type in Address" >
+            android:hint="Street number" 
+            android:textSize="13dp"
+            />
+        
+        
+        <EditText
+            android:id="@+id/search_box_zip"
+            android:layout_width="100dp"
+            android:layout_height="25dp"
+            android:layout_alignLeft="@+id/search_box"
+            android:layout_below="@+id/search_box"
+            android:layout_marginTop="12dp"
+            android:background="@drawable/edittext_shadow"
+            android:ems="10"
+            android:hint="Zip code" 
+            android:textSize="13dp"/>
 
-            <requestFocus />
-        </EditText>
-
-        <Button
-            android:id="@+id/button3"
-            style="?android:attr/buttonStyleSmall"
+        <CheckBox
+            android:id="@+id/checkBox2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/search_btn"
-            android:layout_alignLeft="@+id/search_box"
-            android:layout_alignTop="@+id/search_btn"
-            android:text="GPS" />
+            android:layout_alignBaseline="@+id/checkBox1"
+            android:layout_alignBottom="@+id/checkBox1"
+            android:layout_alignRight="@+id/search_box"
+      		android:shadowColor="@color/black"
+      		android:layout_marginTop="1dp"
+	        android:shadowRadius="2.5"
+	        android:shadowDx="1"
+	        android:shadowDy="1"            
+            android:typeface="sans"
+            android:text="Delivery" />
+
+        <CheckBox
+            android:id="@+id/checkBox1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/search_box_zip"
+            android:layout_toLeftOf="@+id/search_btn"
+            android:layout_marginTop="8dp"
+            android:shadowColor="@color/black"
+            android:shadowDx="1"
+            android:shadowDy="1"
+            android:shadowRadius="2.5"
+            android:text="Pick Up"
+            android:typeface="sans" />
+
+        <ImageButton
+            android:id="@+id/toogle_arrow"
+            android:layout_width="45dp"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/search_btn"
+            android:layout_toRightOf="@+id/search_box"
+            android:layout_marginBottom="4dp"
+            android:clickable="true"
+            android:gravity="center"
+            android:onClick="onClick"
+            android:src="@drawable/toggle_location" />
+
+        <Button
+            android:id="@+id/search_btn"
+            android:layout_width="150dp"
+            android:layout_height="25dp"
+            android:layout_above="@+id/checkBox1"
+            android:layout_alignRight="@+id/toogle_arrow"
+            android:layout_alignTop="@+id/search_box_zip"
+            android:background="@drawable/greenbox"
+            android:shadowColor="#ff005500"
+            android:shadowDx="1"
+            android:shadowDy="1"
+            android:shadowRadius="2"
+            android:text="Search"
+            android:textAlignment="center"
+            android:textColor="#ffffffff"
+            android:textSize="12sp" />
+
+        <ImageView
+            android:id="@+id/icon"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignBottom="@+id/checkBox2"
+            android:layout_centerHorizontal="true"
+            android:src="@drawable/big_icon" 
+            android:visibility="gone"/>
+
+        <include
+            android:id="@+id/loading_indicator"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            layout="@layout/loading"                        
+        	android:visibility="gone"/>
 
     </RelativeLayout>
 
