--- a/res/layout/fragment_menu.xml
+++ b/res/layout/fragment_menu.xml
@@ -1,10 +1,13 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:background="@drawable/bground1">
-    
-    <fragment class="com.example.android.apis.app.FragmentLayout$TitlesFragment"
-            android:id="@+id/menu"
-            android:layout_width="match_parent" android:layout_height="match_parent" />
-    
-</FrameLayout>
+ 
+            <ExpandableListView
+                android:id="@+id/lvExp"
+                android:layout_height="match_parent"
+                android:layout_width="match_parent"
+                android:groupIndicator="@android:color/transparent" />  
+ 
+</LinearLayout>
