--- a/res/layout/list_child_menu.xml
+++ b/res/layout/list_child_menu.xml
@@ -11,7 +11,7 @@
         android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="20dip"
         android:layout_alignParentTop="true"
         android:textColor="@color/lightblue1"
         android:lines="1"
@@ -19,30 +19,27 @@
         android:fadingEdge="horizontal"
        	android:scrollHorizontally="true"
         android:marqueeRepeatLimit="marquee_forever"
-        android:text="Menu Name"
+        android:text="Item Name"
+        android:textSize="16sp" 
         android:textAppearance="?android:attr/textAppearanceLarge" />
 
     <TextView
         android:id="@+id/description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_marginRight="20dip"
+        android:layout_marginLeft="20dip"
         android:layout_below="@+id/name"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="3dp"
         android:text="Description"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="16sp" />
+        android:textSize="15sp" />
     
    <ImageView
-        android:id="@+id/indicator"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/name"
+	    android:id="@+id/imageView1"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:layout_alignParentRight="true"    
         android:layout_marginTop="10dip"
-        android:layout_marginRight="5dip"
-        android:layout_marginLeft="10dip"
-        android:layout_alignParentRight="true"
-        android:src="@drawable/arrow_down" />
+	    android:src="@drawable/arrow_right" />
         
 </RelativeLayout>
