--- a/res/layout/account_fragment.xml
+++ b/res/layout/account_fragment.xml
@@ -14,23 +14,52 @@
         android:layout_alignParentTop="true"
         android:layout_marginTop="43dp"
         android:src="@drawable/banner_com" />
+    
+    <EditText
+       	android:id="@+id/username_box"
+        android:layout_width="220dp"
+        android:layout_height="25dp"
+        android:layout_centerInParent="true"
+      	android:layout_below="@+id/imageView1"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="20dp"            
+        android:background="@drawable/edittext_shadow"
+      	android:longClickable="false"
+        android:ems="10"
+        android:hint="Username" 
+        android:textSize="13dp" />
+    
+      <EditText
+       	android:id="@+id/password_box"
+        android:layout_width="220dp"
+        android:layout_height="25dp"
+        android:layout_centerInParent="true"
+      	android:layout_below="@+id/username_box"
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="20dp"            
+        android:background="@drawable/edittext_shadow"
+      	android:longClickable="false"
+        android:ems="10"
+        android:hint="Password" 
+        android:textSize="13dp" />
 
     <Button
-        android:id="@+id/btn_signup"
-        android:layout_width="200dp"
+        android:id="@+id/btnSignup"
+        android:layout_width="220dp"
         android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/btn_login"
-        android:layout_alignRight="@+id/btn_login"
-        android:layout_below="@+id/btn_login"
+        android:layout_alignLeft="@+id/btnLogin"
+        android:layout_alignRight="@+id/btnLogin"
+        android:layout_below="@+id/btnLogin"
         android:text="Signup" />
 
     <Button
-        android:id="@+id/btn_login"
-        android:layout_width="200dp"
+        android:id="@+id/btnLogin"
+        android:layout_width="220dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/imageView1"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="111dp"
+        android:gravity="center"
         android:text="Login" />
 
 </RelativeLayout>
