--- a/res/layout/list_menu.xml
+++ b/res/layout/list_menu.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="5dp"
+    android:background="@color/gray"
     tools:context=".MainActivity" >
 
     <TextView
@@ -13,7 +14,6 @@
         android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
-        android:textColor="@color/lightblue1"
         android:lines="1"
         android:ellipsize="marquee"
         android:fadingEdge="horizontal"
@@ -21,19 +21,7 @@
         android:marqueeRepeatLimit="marquee_forever"
         android:text="Menu Name"
         android:textAppearance="?android:attr/textAppearanceLarge" />
-
-    <TextView
-        android:id="@+id/description"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_marginRight="20dip"
-        android:layout_below="@+id/name"
-        android:layout_marginTop="5dp"
-        android:text="Description"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textSize="16sp" />
-    
+ 
    <ImageView
         android:id="@+id/indicator"
         android:layout_width="wrap_content"
