--- a/res/layout/list_order.xml
+++ b/res/layout/list_order.xml
@@ -47,6 +47,19 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textSize="16sp" />
     
+	<TextView
+        android:id="@+id/instr"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_toLeftOf="@+id/btnRemove"
+        android:layout_below="@+id/option"
+        android:layout_marginRight="10dp"
+        android:layout_marginTop="5dp"
+        android:text="Instruction"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:textSize="16sp" />
+    
    <TextView
         android:id="@+id/price"
         android:layout_width="wrap_content"
@@ -55,7 +68,7 @@
         android:layout_below="@+id/name"
         android:layout_marginTop="5dp"
         android:layout_marginBottom="5dp"
-      	android:layout_marginRight="10dp"
+      	android:layout_marginLeft="5dp"
         android:text="Price"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:textSize="16sp" />
