--- a/res/layout/account_fragment.xml
+++ b/res/layout/account_fragment.xml
@@ -39,6 +39,8 @@
         android:layout_marginTop="20dp"            
         android:background="@drawable/edittext_shadow"
       	android:longClickable="false"
+      	android:inputType="textPassword"
+      	android:password="true"
         android:ems="10"
         android:hint="Password" 
         android:textSize="13dp" />
