--- a/res/layout/fragment_order.xml
+++ b/res/layout/fragment_order.xml
@@ -19,7 +19,7 @@
     <Button
         android:id="@+id/btnClear"
         android:layout_width="wrap_content"
-        android:layout_height="30dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="5dp"
