--- a/res/layout/fragment_search.xml
+++ b/res/layout/fragment_search.xml
@@ -28,6 +28,8 @@
             android:ems="10"
             android:hint="Street number" 
             android:textSize="13dp"
+            android:singleLine="true"
+            android:imeOptions="actionNext"
             />
         
         
@@ -41,7 +43,10 @@
             android:background="@drawable/edittext_shadow"
             android:ems="10"
             android:hint="Zip code" 
-            android:textSize="13dp"/>
+            android:textSize="13dp"
+            android:singleLine="true"
+            android:imeOptions="actionDone"
+            />
 
         <CheckBox
             android:id="@+id/checkBox2"
