--- a/res/layout/list_order.xml
+++ b/res/layout/list_order.xml
@@ -76,7 +76,7 @@
 	<Button
         android:id="@+id/btnRemove"
         android:layout_width="wrap_content"
-        android:layout_height="30dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentBottom="true"
         android:layout_below="@+id/price"
