--- a/res/layout/fragment_search.xml
+++ b/res/layout/fragment_search.xml
@@ -134,7 +134,7 @@
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
         android:layout_marginTop="43dp"
-        android:src="@drawable/banner_com" />
+        android:src="@drawable/banner" />
 
 
 
